
[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = { version = "^4.0.1", path = "./core", develop = true }

openbb-economy = { version = "^1.0.0", path = "./extensions/economy", develop = true }
openbb-equity = { version = "^1.0.0", path = "./extensions/equity", develop = true }
openbb-index = { version = "^1.0.0", path = "./extensions/index", develop = true }

# Community dependencies
openbb-cboe = { version = "^1.0.0", path = "./providers/cboe", optional = true, develop = true }
openbb-yfinance = { version = "^1.0.0", path = "./providers/yfinance", optional = true, develop = true }

openbb-charting = { version = "^1.0.0", path = "./extensions/charting", optional = true, develop = true }
openbb-technical = { version = "^1.0.0", path = "./extensions/technical", optional = true, develop = true }
